# SortWord

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Projects/: CMakeLists.txt
Projects/SortUtils/: CMakeLists.txt
Projects/SortUtils/public/: commandparser.h  words.h  wordsorter.h
Projects/SortUtils/src/: commandparser.cpp  wordsorter.cpp
Projects/SortWord/: CMakeLists.txt
Projects/SortWord/src/: main.cpp
Projects/Utils/public/: commandparser.h
Projects/Utils/src/: commandparser.cpp
Tests/: CMakeLists.txt
Tests/TestUtils/: CMakeLists.txt
Tests/TestUtils/src/: testcommandparser.cpp  testsortword.cpp
